After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 786355 - FTBFS on x32 architecture: format '%ld' expects argument of type 'long int', but argument 4 has type 'time_t {aka long long int}' [-Werror=format=]
FTBFS on x32 architecture: format '%ld' expects argument of type 'long int',...
Status: RESOLVED FIXED
Product: gnome-desktop
Classification: Core
Component: general
3.22.x
Other Linux
: Normal blocker
: ---
Assigned To: Desktop Maintainers
Desktop Maintainers
Depends on:
Blocks:
 
 
Reported: 2017-08-16 09:38 UTC by Laurent Bigonville
Modified: 2017-08-22 09:45 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
thumbnailer: Fix compile-time error on x32 (964 bytes, patch)
2017-08-16 10:08 UTC, Laurent Bigonville
none Details | Review
thumbnailer: Fix compile-time error on x32 (962 bytes, patch)
2017-08-22 09:08 UTC, Laurent Bigonville
committed Details | Review

Description Laurent Bigonville 2017-08-16 09:38:17 UTC
Hi,

gnome-desktop FTBFS on x32 architecture, this is similar to bug#700548


Build logs:
https://buildd.debian.org/status/logs.php?pkg=gnome-desktop3&ver=3.22.2-1&arch=x32
Comment 1 Laurent Bigonville 2017-08-16 10:08:47 UTC
Created attachment 357706 [details] [review]
thumbnailer: Fix compile-time error on x32
Comment 2 Bastien Nocera 2017-08-21 22:52:21 UTC
Review of attachment 357706 [details] [review]:

::: libgnome-desktop/gnome-desktop-thumbnail.c
@@ +1117,3 @@
   close (tmp_fd);
 
+  g_snprintf (mtime_str, 21, "%" G_GUINT64_FORMAT, (guint64) mtime);

This is the mtime of the original file, so, in corner cases, this might represent a date prior to 1970. Please make it use a signed 64 integer instead.
Comment 3 Laurent Bigonville 2017-08-22 09:08:49 UTC
Created attachment 358116 [details] [review]
thumbnailer: Fix compile-time error on x32
Comment 4 Bastien Nocera 2017-08-22 09:09:34 UTC
Review of attachment 358116 [details] [review]:

Looks good, thanks!