thumbnailer: Fix compile-time error on x32

https://bugzilla.gnome.org/show_bug.cgi?id=786355